@@ -1,7 +1,7 @@
 /************************************************************************
  * sched/getpid.c
  *
- *   Copyright (C) 2007, 2009 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2009, 2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -44,7 +44,7 @@
 #include "os_internal.h"
 
 /************************************************************************
- * Definitions
+ * Pre-processor Definitions
  ************************************************************************/
 
 /************************************************************************
@@ -77,9 +77,28 @@
 
 pid_t getpid(void)
 {
-  /* Return the task ID from the TCB at the head of the
-   * ready-to-run task list
+  FAR struct tcb_s *rtcb;
+
+  /* Get the the TCB at the head of the ready-to-run task list.  That
+   * will be the currently executing task.  There is an exception to
+   * this:  Verify early in the start-up sequence, the g_readytorun
+   * list may be empty!  This case, of course, the start-up/IDLE thread
+   * with pid == 0 must be running.
    */
 
-  return ((FAR struct tcb_s*)g_readytorun.head)->pid;
+  rtcb = (FAR struct tcb_s *)g_readytorun.head;
+  if (rtcb)
+    {
+      /* Return the task ID from the TCB at the head of the ready-to-run
+       * task list
+       */
+
+      return rtcb->pid;
+    }
+
+  /* We must have been called earlier in the start up sequence from the
+   * start-up/IDLE thread before the g_readytorun list has been initialized.
+   */
+
+  return 0;
 }
